# langchain-practice

Topics/RAG/: overview.txt
Topics/RAG/Implementaion/: .env  blog.txt  ingestion.py  main.py
Topics/RAG/RAG Chatbot/: .env  ingestion.py  main.py
Topics/RAG/RAG Chatbot/backend/: core.py
Topics/RAG/TalkToPdf/: .env  main.py
Topics/ReAct Agents/: overview.txt
Topics/ReAct Agents/langchain-react/: .env  callbacks.py  main.py
Topics/ReAct Agents/profile_finder_agent/: backend_server.py  frontend.py  llm_application.py
projects/SQL_Agent/backend/: database.py  main.py  models.py  requirements.txt  schemas.py
projects/SQL_Agent/backend/services/: mail_service.py  prompt_store.py
projects/SQL_Agent/backend/sql_agent/: agent_prompt.py  agent_tools.py  data_ingestion.py  metadata_extractor.py  prototype.py  sql_agent.py
projects/SQL_Agent/frontend/: api_manager.py  main.py
projects/SQL_Agent/frontend/pages/: authentication.py  chat_database.py  configure_database.py
projects/travel_genie/: README.md  pyproject.toml
projects/travel_genie/src/travel_genie_affordable_trip_planner_chat/: crew.py  main.py
projects/travel_genie/src/travel_genie_affordable_trip_planner_chat/config/: agents.yaml  tasks.yaml
