[project]
name = "travel_genie_affordable_trip_planner_chat"
version = "0.1.0"
description = "travel_genie_affordable_trip_planner_chat using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
travel_genie_affordable_trip_planner_chat = "travel_genie_affordable_trip_planner_chat.main:run"
run_crew = "travel_genie_affordable_trip_planner_chat.main:run"
train = "travel_genie_affordable_trip_planner_chat.main:train"
replay = "travel_genie_affordable_trip_planner_chat.main:replay"
test = "travel_genie_affordable_trip_planner_chat.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
